--- a/week7/practice_theano.ipynb
+++ b/week7/practice_theano.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -67,11 +67,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "size =  130113\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "from collections import defaultdict\n",
@@ -98,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -121,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true,
     "scrolled": true
@@ -143,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -156,11 +162,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lines\n",
+      "['אנרכיזם' 'אוטיזם קלאסי' 'אלבדו' 'אלבמה' 'אכילס']\n",
+      "\n",
+      "words to ids (0 = bos, 1 = eos):\n",
+      "[[  0 165  33  98  91 179  48 169   1   1   1   1   1   1]\n",
+      " [  0 165  43  57 179  48 169 126  85  52 165  11 179   1]\n",
+      " [  0 165  52  34  47  43   1   1   1   1   1   1   1   1]\n",
+      " [  0 165  52  34  96  44   1   1   1   1   1   1   1   1]\n",
+      " [  0 165  91 179  52  11   1   1   1   1   1   1   1   1]]\n",
+      "\n",
+      "back to words\n",
+      "['אנרכיזם', 'אוטיזם קלאסי', 'אלבדו', 'אלבמה', 'אכילס']\n"
+     ]
+    }
+   ],
    "source": [
     "# Here's how you cast lines into ids and backwards.\n",
     "batch_lines = all_words[:5]\n",
@@ -184,11 +207,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAfYAAAEICAYAAACtc9bVAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4wLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvpW3flQAAG1FJREFUeJzt3XvUXXV95/H3RxDrBeUWHQxgsKYq\nOlOrKTBaK0rlotYwa+kS7dLUoSszI/amayq0nYWX0mLHimW0zqBQgkVThtohVirNQlHbJUhQlgpI\nkwJCIEI03BRFg9/5Y/8eODycJE/Ocz37eb/Wyjp7//Zv7/PbOc9vf3+XffZJVSFJkvrhMfNdAEmS\nNHMM7JIk9YiBXZKkHjGwS5LUIwZ2SZJ6xMAuSVKPGNg1p5K8O8nfzHc5JD0syXlJ/mQa+/8gyTNn\nskwanYFdkhaIJDcn+bX5LsfOJLk8yW8NplXVk6rqxvkqkx7JwK5ZkY5/X9IMSbLnfJdB48ELrwBI\n8tYknxlY35TkwoH1W5O8IMmLk1yV5J72+uKBPJcnOT3JvwD3A89McmiSLya5L8l64ICB/D+X5G+S\nfD/J3e14T5ujU5YWlCSfAA4BPtOGtv8gSSU5KcktwOdbvv+b5LutDn4pyfMGjnFeko8k+Wyrc1cm\n+fm2LUnOTHJn2/cbSZ4/pBz7JvmHJFuT3NWWD2rbTgdeCny4lfHDLb2SPKstPyXJ+W3/7yT544lG\nfpLfTPLPST7Qjn1TkuMH3vs3k9zYyn5Tkt+Ypf/uXjOwa8IXgZcmeUySA4HHAi8BaHNnTwJuAT4L\nnAXsD3wQ+GyS/QeO82ZgNbA38B3gk8DVdAH9fcCqgbyrgKcAB7fj/VfgR7N0ftKCVlVvpqtjv15V\nTwImGtYvA54LHNvW/xFYDjwV+BpwwaRDvRF4D7AvsAk4vaUfA/wq8AvAPsAbgO8PKcpjgL8GnkHX\n0PgR8OFWxj8Cvgy8vQ2/v33I/v+Lrl4/s5X9LcBbB7YfAdxAd034c+Cc1uh4It215fiq2ht4MXDN\nkONrFwzsAqDNj90HvICuMl4K3JbkOW39y8CrgY1V9Ymq2l5VnwK+Dfz6wKHOq6prq2o7cCDwy8D/\nqKoHqupLwGcG8v6ULqA/q6oerKqrq+reWT5Vady8u6p+WFU/Aqiqc6vqvqp6AHg38ItJnjKQ/9NV\n9dVWBy+gq9PQ1be9gecAqarrq2rL5Derqu9X1d9V1f1VdR9dw+BlUylokj3oGgyntjLeDPwFXYN/\nwneq6mNV9SCwhu46MTFS9zPg+UkeX1VbquraqbyvHsnArkFfBI6ia9V/EbicrkK/rK0/na4XPug7\nwNKB9VsHlp8O3FVVP5yUf8In6BoQa5PcnuTPkzx2+qch9cpDdSrJHknOSPJvSe4Fbm6bDhjI/92B\n5fvpRtuoqs/T9bw/AtyR5OwkT578ZkmekOT/tGH0e4EvAfu0oL0rBwB78ch6Pvka8VD5qur+tvik\ndp14A93I3ZY2nfCcKbynJjGwa9BEYH9pW/4ijwzst9MNzw06BLhtYH3w5wK3APu2IbbB/F3Gqp9W\n1Xuq6jC6YbfX0A3bSYvVsJ/bHEx7E7AS+DW64e5lLT1TOnjVWVX1IuB5dEPy/31ItncCzwaOqKon\n0zX0B99jZz8J+j26kYHB68Tka8TOyndpVb2Srhf/beBjU9lPj2Rg16AvAi8HHl9Vm+mG34+jGy7/\nOnAJ8AtJ3pRkzyRvAA4D/mHYwarqO8AG4D1J9kryKwwM2yd5eZJ/33oC99JdEB6cvdOTFrw76Oam\nd2Rv4AG6ufEnAH861QMn+eUkR7RRsR8CP2Z4fdubbl797iT7AadNtYxteP1C4PQkeyd5BvAOYJfP\nrkjytCSvbR2BB4Af7KB82gUDux5SVf9KV5m+3NbvBW4E/qXNgX+frlf9TroLyx8Ar6mq7+3ksG+i\nu1lmG90F4vyBbf8OuIguqF9P17Dw4TVazP4M+OMkdwOvG7L9fLqh7duA64ArduPYT6brAd/VjvF9\n4AND8n0IeDxd7/sK4HOTtv8l8Lp2V/tZQ/b/bbqGw43AP9PdQHvuFMr3GLpry+1014uXAW+bwn6a\nJFU7G1WRJEnjxB67JEk9YmCXJKlHDOySJPWIgV2SpB4Z2x8VOOCAA2rZsmXzXQxpwbv66qu/V1VL\n5rscO2JdlqZmqnV5bAP7smXL2LBhw3wXQ1rwkkx+WuCCYl2WpmaqddmheEmSesTALklSjxjYJUnq\nEQO7JEk9YmCXJKlHDOySJPWIgV2SpB4xsEuS1CMGdkmSemRsnzynmbPslM/OyHFuPuPVM3IcqU+m\nUr+sO5pJ9tglSeoRA7skST2yy8Ce5Nwkdyb51kDa/0zy7STfSPL3SfYZ2HZqkk1Jbkhy7ED6cS1t\nU5JTBtIPTXJlko1J/jbJXjN5gpIkLSZT6bGfBxw3KW098Pyq+g/AvwKnAiQ5DDgReF7b56+S7JFk\nD+AjwPHAYcAbW16A9wNnVtVy4C7gpGmdkSRJi9guA3tVfQnYNintn6pqe1u9AjioLa8E1lbVA1V1\nE7AJOLz921RVN1bVT4C1wMokAV4BXNT2XwOcMM1zkiRp0ZqJOfb/DPxjW14K3DqwbXNL21H6/sDd\nA42EifShkqxOsiHJhq1bt85A0aXFxak1qf+mFdiT/BGwHbhgImlIthohfaiqOruqVlTViiVLluxu\ncSU5tSb13siBPckq4DXAb1TVRDDeDBw8kO0g4PadpH8P2CfJnpPSJc0Cp9ak/hspsCc5DngX8Nqq\nun9g0zrgxCSPS3IosBz4KnAVsLwN0+1F1wtY1xoEXwBe1/ZfBVw82qlImgFzMrXmtJo0e6bydbdP\nAV8Bnp1kc5KTgA8DewPrk1yT5H8DVNW1wIXAdcDngJOr6sFW0d8OXApcD1zY8kLXQHhHkk10F4Zz\nZvQMJU3JXE6tOa0mzZ5dPlK2qt44JHmHwbeqTgdOH5J+CXDJkPQb6Yb2JM2Tgam1o6cwtcYO0h+a\nWmuNeafWpHngs+J7bKaeAa9+G5hae9mQqbVPJvkg8HQenloLbWoNuI1uau1NVVVJJqbW1uLUmjQv\nfKSstIg4tSb1nz12aRFxak3qP3vskiT1iIFdkqQecShekkbgzalaqAzskjTPptJIuPmMV89BSdQH\nDsVLktQjBnZJknrEoXjNGIcTJWn+GdglSbPGBv/cM7BLkkbiNwMWJufYJUnqEQO7JEk9YmCXJKlH\nDOySJPWIN89JkubVVG/C8+75qbHHLklSjxjYJUnqEQO7JEk9YmCXJKlHDOySJPWIgV2SpB4xsEuS\n1CO7DOxJzk1yZ5JvDaTtl2R9ko3tdd+WniRnJdmU5BtJXjiwz6qWf2OSVQPpL0ryzbbPWUky0ycp\nSdJiMZUH1JwHfBg4fyDtFOCyqjojySlt/V3A8cDy9u8I4KPAEUn2A04DVgAFXJ1kXVXd1fKsBq4A\nLgGOA/5x+qcmSRqVv9w2vnbZY6+qLwHbJiWvBNa05TXACQPp51fnCmCfJAcCxwLrq2pbC+brgePa\ntidX1VeqqugaDycgSZJGMuoc+9OqagtAe31qS18K3DqQb3NL21n65iHpQyVZnWRDkg1bt24dsejS\n4uXUmtR/M33z3LBKXCOkD1VVZ1fViqpasWTJkhGLKC1q59FNdw2amFpbDlzW1uGRU2ur6abNGJha\nOwI4HDhtojHAw1NrE/tNfi9Js2zUwH5HG0anvd7Z0jcDBw/kOwi4fRfpBw1JlzQLnFqT+m/UwL4O\nmBh+WwVcPJD+ljaEdyRwTxuqvxQ4Jsm+rWV/DHBp23ZfkiPbkN1bBo4laW7M+dSa02rS7JnK190+\nBXwFeHaSzUlOAs4AXplkI/DKtg7dXe03ApuAjwFvA6iqbcD7gKvav/e2NID/Bny87fNveEe8tFDM\n2tSa02rS7Nnl192q6o072HT0kLwFnLyD45wLnDskfQPw/F2VQ9KsuSPJgVW1ZTem1o6alH45Tq1J\nC4JPnpPk1JrUI1N5QI2knmhTa0cBByTZTHd3+xnAhW2a7Rbg9S37JcCr6KbJ7gfeCt3UWpKJqTV4\n9NTaecDj6abVnFpbYHzwTP8Z2KVFxKk1qf8cipckqUfssUvSGJjKEPrNZ7x6Dkqihc4euyRJPWJg\nlySpRwzskiT1iHPsUzDVr4c4vyVJs8f7DKbGwL4A+ccraRR+R13gULwkSb1iYJckqUcM7JIk9Yhz\n7JpT3ogoSbPLHrskST1iYJckqUcM7JIk9YiBXZKkHjGwS5LUIwZ2SZJ6xMAuSVKPGNglSeoRH1Az\ng/zxFknSfLPHLklSjxjYJUnqkWkF9iS/n+TaJN9K8qkkP5fk0CRXJtmY5G+T7NXyPq6tb2rblw0c\n59SWfkOSY6d3SpIkLV4jB/YkS4HfAVZU1fOBPYATgfcDZ1bVcuAu4KS2y0nAXVX1LODMlo8kh7X9\nngccB/xVkj1GLZckSYvZdG+e2xN4fJKfAk8AtgCvAN7Utq8B3g18FFjZlgEuAj6cJC19bVU9ANyU\nZBNwOPCVaZZN0m5I8vvAbwEFfBN4K3AgsBbYD/ga8Oaq+kmSxwHnAy8Cvg+8oapubsc5la4h/yDw\nO1V16RyfyrRN9VcIpYVo5B57Vd0GfAC4hS6g3wNcDdxdVdtbts3A0ra8FLi17bu95d9/MH3IPo+Q\nZHWSDUk2bN26ddSiS5rEETipP6YzFL8vXW/7UODpwBOB44dkrYlddrBtR+mPTqw6u6pWVNWKJUuW\n7H6hJe3MxAjcnjxyBO6itn0NcEJbXtnWaduPnjwCV1U3ARMjcJLmyHSG4n8NuKmqtgIk+TTwYmCf\nJHu2XvlBwO0t/2bgYGBzu3A8Bdg2kD5hcJ/ecYhPC1FV3ZZkYgTuR8A/sRsjcEkGR+CuGDj00BG4\nJKuB1QCHHHLIjJ+PtJhN5674W4AjkzyhtdSPBq4DvgC8ruVZBVzclte1ddr2z1dVtfQT213zhwLL\nga9Oo1ySdtNcj8A5+ibNnpF77FV1ZZKL6G6o2Q58HTgb+CywNsmftLRz2i7nAJ9oN8dto5uHo6qu\nTXIhXaNgO3ByVT04arkkjcQROPWCTwCd5l3xVXUacNqk5BsZMqdWVT8GXr+D45wOnD6dskialodG\n4OiG4o8GNvDwCNxaho/AfYWBEbgk64BPJvkgXc/fEThpjvmseEmOwEk9YmCXBDgCJ/WFz4qXJKlH\nDOySJPWIgV2SpB4xsEuS1COL/uY5nwQnSeoTe+ySJPXIou+xa2Hy6VGSNBp77JIk9YiBXZKkHjGw\nS5LUIwZ2SZJ6xMAuSVKPGNglSeoRA7skST1iYJckqUcM7JIk9YiBXZKkHjGwS5LUIz4rXpK0qPT9\ntyjssUuS1CMGdkmSesTALklSj0wrsCfZJ8lFSb6d5Pok/zHJfknWJ9nYXvdteZPkrCSbknwjyQsH\njrOq5d+YZNV0T0qSpMVquj32vwQ+V1XPAX4RuB44BbisqpYDl7V1gOOB5e3fauCjAEn2A04DjgAO\nB06baAxIkqTdM3JgT/Jk4FeBcwCq6idVdTewEljTsq0BTmjLK4Hzq3MFsE+SA4FjgfVVta2q7gLW\nA8eNWi5Jo3EETuqH6fTYnwlsBf46ydeTfDzJE4GnVdUWgPb61JZ/KXDrwP6bW9qO0h8lyeokG5Js\n2Lp16zSKLmkIR+CkHphOYN8TeCHw0ar6JeCHPFzph8mQtNpJ+qMTq86uqhVVtWLJkiW7W15JO+AI\nnNQf0wnsm4HNVXVlW7+ILtDf0So47fXOgfwHD+x/EHD7TtIlzZ05HYFz9E2aPSMH9qr6LnBrkme3\npKOB64B1wMS82irg4ra8DnhLm5s7ErinXSguBY5Jsm8bsjumpUmaO3M6AufomzR7pvtI2d8GLkiy\nF3Aj8Fa6xsKFSU4CbgFe3/JeArwK2ATc3/JSVduSvA+4quV7b1Vtm2a5JO2eYSNwp9BG4Kpqy26M\nwB01Kf3yWSy3pEmmFdir6hpgxZBNRw/JW8DJOzjOucC50ymLpNFV1XeT3Jrk2VV1Aw+PwF1HN/J2\nBo8egXt7krV0N8rd04L/pcCfDtwwdwxw6lyei7TY+SMwkiY4Aif1gIFdvdb3X3GaSY7ASf3gs+Il\nSeoRA7skST3iULwkSZOM8zSePXZJknrEwC5JUo8Y2CVJ6hEDuyRJPWJglySpRwzskiT1iIFdkqQe\nMbBLktQjBnZJknrEwC5JUo8Y2CVJ6hEDuyRJPWJglySpRwzskiT1iIFdkqQe8ffYJUkawVR+sx3m\n/nfb7bFLktQjBnZJknrEwC5JUo84x65FbyrzZHM9RyZJo5p2jz3JHkm+nuQf2vqhSa5MsjHJ3ybZ\nq6U/rq1vatuXDRzj1JZ+Q5Jjp1smSZIWq5kYiv9d4PqB9fcDZ1bVcuAu4KSWfhJwV1U9Cziz5SPJ\nYcCJwPOA44C/SrLHDJRL0m6yoS6Nv2kF9iQHAa8GPt7WA7wCuKhlWQOc0JZXtnXa9qNb/pXA2qp6\noKpuAjYBh0+nXJJGZkNdGnPT7bF/CPgD4GdtfX/g7qra3tY3A0vb8lLgVoC2/Z6W/6H0Ifs8QpLV\nSTYk2bB169ZpFl3SIBvqUj+MfPNcktcAd1bV1UmOmkgekrV2sW1n+zwyseps4GyAFStWDM0jzYaF\n+iCKGTbRUN+7rU+5oZ5ksKF+xcAxhzbUk6wGVgMccsghM3sW0iI3nR77S4DXJrkZWEvXsv8QsE+S\niQbDQcDtbXkzcDBA2/4UYNtg+pB9JM2BwYb6YPKQrDPSUK+qs6tqRVWtWLJkyW6XV9KOjRzYq+rU\nqjqoqpbRzal9vqp+A/gC8LqWbRVwcVte19Zp2z9fVdXST2w34xwKLAe+Omq5JI3EhrrUE7PxgJp3\nAe9IsoluaO6cln4OsH9LfwdwCkBVXQtcCFwHfA44uaoenIVySdoBG+pSf8zIA2qq6nLg8rZ8I0Nu\nlqmqHwOv38H+pwOnz0RZJM2odwFrk/wJ8HUe2VD/RGuob6NrDFBV1yaZaKhvx4a6NOd88pykR7Ch\nLs2suX66pc+KlySpRwzskiT1iIFdkqQeMbBLktQjBnZJknrEwC5JUo8Y2CVJ6pFef499qj/cIUlS\nX9hjlySpR3rdY5ekyRzJU9/ZY5ckqUcM7JIk9YiBXZKkHnGOXZpjc/1LT5IWF3vskiT1iIFdkqQe\ncShemkF+lUrSfLPHLklSj9hjlxYgb7CTNCp77JIk9YiBXZKkHjGwS5LUIwZ2SZJ6ZOTAnuTgJF9I\ncn2Sa5P8bkvfL8n6JBvb674tPUnOSrIpyTeSvHDgWKta/o1JVk3/tCRJWpym02PfDryzqp4LHAmc\nnOQw4BTgsqpaDlzW1gGOB5a3f6uBj0LXEABOA44ADgdOm2gMSJobNtSl/hg5sFfVlqr6Wlu+D7ge\nWAqsBNa0bGuAE9rySuD86lwB7JPkQOBYYH1Vbauqu4D1wHGjlkvSSGyoSz0xI3PsSZYBvwRcCTyt\nqrZAF/yBp7ZsS4FbB3bb3NJ2lD7sfVYn2ZBkw9atW2ei6JKwoS71ybQDe5InAX8H/F5V3buzrEPS\naifpj06sOruqVlTViiVLlux+YSXt0lw01G2kS7NnWoE9yWPpgvoFVfXplnxHa7nTXu9s6ZuBgwd2\nPwi4fSfpkubYXDXUbaRLs2c6d8UHOAe4vqo+OLBpHTBxw8wq4OKB9Le0m26OBO5pPYBLgWOS7Nvm\n4o5paZLmkA11qR+m02N/CfBm4BVJrmn/XgWcAbwyyUbglW0d4BLgRmAT8DHgbQBVtQ14H3BV+/fe\nliZpjthQl/pj5B+Bqap/ZviwG8DRQ/IXcPIOjnUucO6oZZE0bRMN9W8muaal/SFdw/zCJCcBtwCv\nb9suAV5F11C/H3grdA31JBMNdbChLs05f91Nkg11qUd8pKwkST1iYJckqUcM7JIk9YiBXZKkHjGw\nS5LUIwZ2SZJ6xMAuSVKPGNglSeoRA7skST1iYJckqUcM7JIk9YiBXZKkHjGwS5LUIwZ2SZJ6xMAu\nSVKPGNglSeoRA7skST1iYJckqUcM7JIk9YiBXZKkHjGwS5LUIwZ2SZJ6xMAuSVKPGNglSeqRBRPY\nkxyX5IYkm5KcMt/lkTQ667M0f/ac7wIAJNkD+AjwSmAzcFWSdVV13fyWTNLums/6vOyUz872W0gL\n3oII7MDhwKaquhEgyVpgJWBgl8bPjNdnA7Y0dQslsC8Fbh1Y3wwcMTlTktXA6rb6gyQ3zEHZhjkA\n+N48vTcAef+sHHbez2t37Mb/wVid11Tl/VM+r2fMdlkm2WV9nlSXH0jyrTkq22zow9/XuJ/DuJd/\nqvV5SnV5oQT2DEmrRyVUnQ2cPfvF2bkkG6pqxXyXY6Z5XuNlAZ/XLuvzYF1ewOcxJeNefhj/cxj3\n8sPMnsNCuXluM3DwwPpBwO3zVBZJ02N9lubRQgnsVwHLkxyaZC/gRGDdPJdJ0misz9I8WhBD8VW1\nPcnbgUuBPYBzq+raeS7Wzsz7dMAs8bzGy4I8rxHq84I8j90w7uWH8T+HcS8/zOA5pOpRU9mSJGlM\nLZSheEmSNAMM7JIk9YiBfTckuTnJN5Nck2TDfJdnOpKcm+TOwe8PJ9kvyfokG9vrvvNZxlHs4Lze\nneS29rldk+RV81nGUSQ5OMkXklyf5Nokv9vSx/Yz68NjZ8fxmjDudX/c6/hc1GUD++57eVW9YNy/\nMwmcBxw3Ke0U4LKqWg5c1tbHzXk8+rwAzmyf2wuq6pI5LtNM2A68s6qeCxwJnJzkMMb0Mxt47Ozx\nwGHAG9v5jKNxuyacx3jX/fMY7zo+63XZwL5IVdWXgG2TklcCa9ryGuCEOS3UDNjBeY29qtpSVV9r\ny/cB19M94W1cP7OHHjtbVT8BJh47q1k27nV/3Ov4XNRlA/vuKeCfklzdHonZN0+rqi3Q/fEBT53n\n8syktyf5RhvGW7DDjFORZBnwS8CVjO9nNuyxs0vnqSzT0Zdrwrj+HQ0auzo+W3XZwL57XlJVL6Qb\nPjw5ya/Od4E0JR8Ffh54AbAF+Iv5Lc7okjwJ+Dvg96rq3vkuzzRM6THSY8BrwsIwdnV8NuuygX03\nVNXt7fVO4O/phhP75I4kBwK01zvnuTwzoqruqKoHq+pnwMcY088tyWPpLgQXVNWnW/K4fma9eOxs\nj64J4/p3BIxfHZ/tumxgn6IkT0yy98QycAwwzr9INcw6YFVbXgVcPI9lmTETlaX5T4zh55YkwDnA\n9VX1wYFN4/qZjf1jZ3t2TRjXvyNgvOr4XNRlnzw3RUmeSdcih+5RvJ+sqtPnsUjTkuRTwFF0P3d4\nB3Aa8P+AC4FDgFuA11fVWN2ksoPzOopuiK6Am4H/MjGXNS6S/ArwZeCbwM9a8h/Szc2N5WfWvpL0\nIR5+7OxY1adxvSaMe90f9zo+F3XZwC5JUo84FC9JUo8Y2CVJ6hEDuyRJPWJglySpRwzskiT1iIFd\nkqQeMbBLktQj/x+Cn4ZOejQ0GwAAAABJRU5ErkJggg==\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x1f1b515d68>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
@@ -223,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -238,11 +270,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting agentnet\n",
+      "\u001b[31m  Could not find a version that satisfies the requirement agentnet (from versions: )\u001b[0m\n",
+      "\u001b[31mNo matching distribution found for agentnet\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install agentnet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'agentnet'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-9-791118304e9a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mbasic_model_theano\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mBasicTranslationModel\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m model = BasicTranslationModel(inp_voc,out_voc,\n\u001b[1;32m      3\u001b[0m                               emb_size=64, hid_size=128)\n",
+      "\u001b[0;32m~/Documents/Practical_RL/week7/basic_model_theano.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtheano\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0magentnet\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmemory\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mLSTMCell\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mGRUCell\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mAttentionLayer\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0magentnet\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mRecurrence\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0magentnet\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlearning\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgeneric\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mget_mask_by_eos\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'agentnet'"
+     ]
+    }
+   ],
    "source": [
     "from basic_model_theano import BasicTranslationModel\n",
     "model = BasicTranslationModel(inp_voc,out_voc,\n",
@@ -970,7 +1032,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
